--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="icon" href="/favicon@128.png" sizes="128x128" type="image/png">
     <link rel="icon" href="/favicon@256.png" sizes="256x256" type="image/png">
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
+    <link name="description" content="Vic Cowmed AI" />
+    <link rel="mask-icon" href="/favicon.svg" >
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#585654"/>
     <title>Vic da Cowmed - BETA</title>
   </head>
   <body>
