--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#585654"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="#585654">
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon@32.png" sizes="32x32" type="image/png">
     <link rel="icon" href="/favicon@64.png" sizes="64x64" type="image/png">
